# hexchat

./: .editorconfig  meson.build  meson_options.txt
plugins/: meson.build
plugins/checksum/: meson.build
plugins/exec/: meson.build
plugins/fishlim/: meson.build
plugins/lua/: meson.build
plugins/perl/: meson.build
plugins/python/: meson.build
plugins/sysinfo/: meson.build
plugins/upd/: meson.build
plugins/winamp/: meson.build
po/: meson.build
src/: meson.build
src/common/: meson.build
src/fe-gtk/: maingui.c  meson.build  setup.c  xtext.c
